--- a/README
+++ b/README
@@ -1,2 +1,5 @@
-Some of my java utils.
-Feel free to use them.
+Commodity - Some of my java utils
+
+In pursuance of Wiktionary "commodity" mean something useful or valuable. I hope that's also true for this little library of Java classes.
+
+All project related files are licensed under Public Domain. Feel free to use them. 
