--- a/README
+++ b/README
@@ -2,4 +2,4 @@ Commodity - Some of my java utils
 
 In pursuance of Wiktionary "commodity" mean something useful or valuable. I hope that's also true for this little library of Java classes.
 
-All project related files are licensed under Public Domain. Feel free to use them. 
+All project related Java files (in the folder src/) are licensed under Public Domain. Feel free to use them. 
